--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,9 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-outer-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+}
+
+.App-inner-container {
+  flex-grow: 1;
 }
