--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,13 @@
     align-items: center;
     height: 5rem;
     justify-content: space-around;
-    color: bisque;
+    color: peru;
+    background-color: bisque;
+}
+
+.navbar h1 {
+    font-family: 'Lacquer', sans-serif;
+    font-size: 2rem;
 }
 
 .navbar ul {
