--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     display: flex;
     align-items: center;
-    justify-self: center;
+    justify-content: center;
     color: white;
     background-color: peru;
     height: 10rem;
