updated user signin/login functionality

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
-    background-color: peru;
+    color: #A59E8C;
+    background-color: #4C5760;
     height: 10rem;
 }
