--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,3 +1,7 @@
+.section form {
+    padding-top: 10rem;
+}
+
 .section fieldset {
     display: flex;
     flex-direction: column;
@@ -10,13 +14,13 @@
     margin: .5rem 0 .5rem 0;
     border-radius: 3px;
     height: 1.7rem;
-    background-color: papayawhip;
+    background-color: #D7CEB2;
 }
 
 .section button {
     width: 100%;
     height: 2.5rem;
-    background-color: palevioletred;
+    background-color: #93A8AC;
     border-radius: 20px;
     text-transform: uppercase;
     color: white;
