--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,3 +1,7 @@
+.section form {
+    padding-top: 10rem;
+}
+
 .section fieldset {
     display: flex;
     flex-direction: column;
@@ -5,24 +9,18 @@
     margin: 0 auto;
 }
 
-.section p {
-    color: tomato;
-    font-weight: 600;
-    text-align: center;
-}
-
 .section input {
     width: 100%;
     margin: .5rem 0 .5rem 0;
     border-radius: 3px;
     height: 1.7rem;
-    background-color: papayawhip;
+    background-color: #D7CEB2;
 }
 
 .section button {
     width: 100%;
     height: 2.5rem;
-    background-color: palevioletred;
+    background-color: #93A8AC;
     border-radius: 20px;
     text-transform: uppercase;
     color: white;
